--- a/part04-02-druid/src/main/resources/application.yml
+++ b/part04-02-druid/src/main/resources/application.yml
@@ -1,5 +1,8 @@
-#数据库连接
 spring:
+  aop:
+      proxy-target-class: true
+      auto: true
+
   #数据库配置
   datasource:
     #数据库连接池配置
@@ -27,46 +30,31 @@ spring:
       # Spring监控AOP切入点，如x.y.z.service.*,配置多个英文逗号分隔
       aop-patterns: com.example.springboot.part0402druid.admin.service.*,com.example.springboot.part0402druid.admin.mapper.*
 
-    #数据库1配置
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/springboot-learn?useUnicode=true&characterEncoding=utf-8&useSSL=false
-    username: root
-    password: 123456
-    #数据库2配置
-    secondary:
-      driver-class-name: com.mysql.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/springboot-learn-second?useUnicode=true&characterEncoding=utf-8&useSSL=false
-      username: root
-      password: 123456
+      #数据库1配置
+      primary:
+        driver-class-name: com.mysql.jdbc.Driver
+        url: jdbc:mysql://localhost:3306/springboot-learn?useUnicode=true&characterEncoding=utf-8&useSSL=false
+        username: root
+        password: 123456
+      #数据库2配置
+      secondary:
+        driver-class-name: com.mysql.jdbc.Driver
+        url: jdbc:mysql://localhost:3306/springboot-learn-second?useUnicode=true&characterEncoding=utf-8&useSSL=false
+        username: root
+        password: 123456
 
-#mybatis
 mybatis-plus:
-#  mapper-locations: classpath:/mapper/*/*.xml
-  #实体扫描，多个package用逗号或者分号分隔
-#  typeAliasesPackage: com.example.springboot.part0402druid.admin.entity.*
+  mapper-locations: classpath:mapper/*.xml
+  type-aliases-package: com.example.springboot.part0402druid.admin.entity
   global-config:
-    #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
-    id-type: 2
-    #字段策略 0:"忽略判断",1:"非 NULL 判断"),2:"非空判断"
+    # 主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
+    id-type: 1
+    # 字段策略 0:"忽略判断",1:"非 NULL 判断"),2:"非空判断"
     field-strategy: 2
-    #驼峰下划线转换
+    # 驼峰下划线转换
     db-column-underline: true
-    #刷新mapper 调试神器
+    # 刷新mapper 调试神器
     refresh-mapper: true
-    #数据库大写下划线转换
-    #capital-mode: true
-    #序列接口实现类配置
-    #key-generator: com.baomidou.springboot.xxx
-    #逻辑删除配置（下面3个配置）
-#    logic-delete-value: 0
-#    logic-not-delete-value: 1
-#    sql-injector: com.baomidou.mybatisplus.mapper.LogicSqlInjector
-    #自定义填充策略接口实现
-    #meta-object-handler: com.baomidou.springboot.xxx
-    #自定义SQL注入器
-    #sql-injector: com.baomidou.springboot.xxx
-    # SQL 解析缓存，开启后多租户 @SqlParser 注解生效
-#    sql-parser-cache: true
   configuration:
     map-underscore-to-camel-case: true
     cache-enabled: false
