--- a/part02-properties/pom.xml
+++ b/part02-properties/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.example.springboot</groupId>
-	<artifactId>part02-properties</artifactId>
+	<artifactId>part01-02-properties</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
