--- a/part01-hello-world/pom.xml
+++ b/part01-hello-world/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>part01-hello-world</name>
+	<name>part01-01-hello-world</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
