--- a/01-hello/properties/src/main/resources/application.properties
+++ b/01-hello/properties/src/main/resources/application.properties
@@ -1,12 +1,18 @@
-##值得注意的是：properties文件默认编码是GBK，所以获取中文会乱码，yml默认编码格式则是utf-8，获取的中文值不会乱码
+#值得注意的问题
+##1.properties文件默认编码是GBK，所以获取中文会乱码，yml默认编码格式则是utf-8，获取的中文值不会乱码
+##解决办法：修改properties的默认编码为utf-8，已有文件删除后重建生效
+##idea设置：File | Settings | Editor | File Encodings
+##2.属性user.name很特殊，会读取不到定义的值，而是操作系统当前用户名
+
+#环境
 spring.profiles.active=default
 #spring.profiles.active=dev
 
 #自定义属性
 user.name=大白菜
-#参数间的应用
+##参数间的应用
 user.description=飞翔的${user.name}
-#随机数
+##随机数
 ##uuid
 user.random.uuid=${random.uuid}
 ##随机字符串
