02=web:spring mvc

--- a/02-web/mvc/src/main/resources/application.properties
+++ b/02-web/mvc/src/main/resources/application.properties
@@ -6,3 +6,10 @@
 #spring.mvc.view.suffix=
 ##设定日期的格式
 spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
+##接收文件大小
+###单个文件最大接收大小
+spring.servlet.multipart.max-file-size=5MB
+###全部文件最大接收大小
+spring.servlet.multipart.max-request-size=50MB
+##设置静态资源路径，多个以逗号分隔 jar启动以同级的static目录作为静态资源路径
+spring.resources.static-locations=classpath:static/,file:static/
