01-hello:starter,快速开发一个自定义Spring Boot Starter并使用它

--- a/01-hello/starter/demo-spring-boot-starter/pom.xml
+++ b/01-hello/starter/demo-spring-boot-starter/pom.xml
@@ -33,6 +33,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
         </dependency>
+
+        <!-- @ConfigurationProperties annotation processing (metadata for IDEs) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
