01-hello:starter,快速开发一个自定义Spring Boot Starter并使用它

--- a/01-hello/starter/starter-consumer/src/main/resources/application.properties
+++ b/01-hello/starter/starter-consumer/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 management.endpoints.web.exposure.include=*
 
 #simple service
+#simple.service.enabled=true
 simple.service.enabled=true
 simple.service.prefix=prefix.
 simple.service.suffix=.suffix
