--- a/01-hello/starter/demo-spring-boot-starter/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/01-hello/starter/demo-spring-boot-starter/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,7 +1,7 @@
 {
   "properties": [
     {
-      "name": "simple.service.enable",
+      "name": "simple.service.enabled",
       "type": "java.lang.Boolean",
       "description": "enabled simple service,default false.",
       "defaultValue": false
