04-data-access: multiple -> data-source-multiple 多数据源配置 - 方式2：AOP方式，约定service方法名动态设置数据源

--- a/04-data-access/multiple/data-source-aop/src/main/resources/application.properties
+++ b/04-data-access/multiple/data-source-aop/src/main/resources/application.properties
@@ -9,8 +9,8 @@ mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 ##master主数据库 - 写操作
 spring.datasource.master.driver-class-name=org.h2.Driver
 spring.datasource.master.url=jdbc:h2:mem:test
-spring.datasource.master.username=root
-spring.datasource.master.password=123456
+spring.datasource.master.username=sa
+spring.datasource.master.password=
 #slave从数据库 - 读操作
 spring.datasource.slave.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.slave.url=jdbc:mysql://localhost:3306/spring-boot-learn?useUnicode=true&characterEncoding=utf-8&useSSL=true
