--- a/04-data-access/multiple/data-source-multiple/src/main/resources/application.properties
+++ b/04-data-access/multiple/data-source-multiple/src/main/resources/application.properties
@@ -5,8 +5,8 @@ management.endpoints.web.exposure.include=*
 ##primary
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:test
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.username=sa
+spring.datasource.password=
 #cluster
 spring.datasource.cluster.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.cluster.url=jdbc:mysql://localhost:3306/spring-boot-learn?useUnicode=true&characterEncoding=utf-8&useSSL=true
