04-data-access:tool - flyway:使用flyway管理数据库版本

--- a/04-data-access/tool/flyway/src/main/resources/application.properties
+++ b/04-data-access/tool/flyway/src/main/resources/application.properties
@@ -6,8 +6,13 @@ spring.jpa.open-in-view=true
 spring.jpa.show-sql=true
 #h2
 spring.h2.console.enabled=true
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.username=sa
+spring.datasource.password=
 
 #flyway 默认sql路径:/db/migration
+#sql脚本命名规范：前辍（V/R）+版本号（小版本之间以.或_分隔）+双下划线+描述.sql。
 #spring-boot2.0的flyway配置属性前需要加上spring,下面是摘抄的详细配置
 
 #flyway.baseline-description对执行迁移时基准版本的描述.
