--- a/05-transaction/multi-transaction/src/main/resources/application.properties
+++ b/05-transaction/multi-transaction/src/main/resources/application.properties
@@ -6,14 +6,18 @@ logging.level.com.example.springframework.boot.multi.transaction.mapper=debug
 
 #db
 ##primary
-spring.datasource.hikari.driver-class-name=org.h2.Driver
-spring.datasource.hikari.jdbc-url=jdbc:h2:mem:test
-spring.datasource.hikari.username=sa
-spring.datasource.hikari.password=
+spring.datasource.primary.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.primary.jdbc-url=jdbc:mysql://localhost:3306/spring-boot-learn?useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource.primary.username=root
+spring.datasource.primary.password=123456
 #cluster
-spring.datasource.hikari.cluster.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.hikari.cluster.jdbc-url=jdbc:mysql://localhost:3306/spring-boot-learn?useUnicode=true&characterEncoding=utf-8&useSSL=true
-spring.datasource.hikari.cluster.username=root
-spring.datasource.hikari.cluster.password=123456
+spring.datasource.cluster.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.cluster.jdbc-url=jdbc:mysql://localhost:3306/spring-boot-learn-slave?useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource.cluster.username=root
+spring.datasource.cluster.password=123456
 
 #flyway对主数据源生效
+spring.flyway.baseline-on-migrate=true
+
+#Atomikos id
+spring.jta.transaction-manager-id=multi-transaction-atomikos
