--- a/10-more/schedule/spring-annotation-schedule/pom.xml
+++ b/10-more/schedule/spring-annotation-schedule/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example.springframework.boot</groupId>
-    <artifactId>schedule</artifactId>
+    <artifactId>spring-annotation-schedule</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>schedule</name>
+    <name>spring-annotation-schedule</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
