--- a/10-more/aop/spring-aop/pom.xml
+++ b/10-more/aop/spring-aop/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example.springframework.boot</groupId>
-    <artifactId>aop</artifactId>
+    <artifactId>spring-aop</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>aop</name>
+    <name>spring-aop</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
