--- a/10-more/async/spring-async/pom.xml
+++ b/10-more/async/spring-async/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example.springframework.boot</groupId>
-    <artifactId>async</artifactId>
+    <artifactId>spring-async</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>async</name>
+    <name>spring-async</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
