--- a/02-web/exception/exception-handler/pom.xml
+++ b/02-web/exception/exception-handler/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example.springframework.boot</groupId>
-    <artifactId>exception</artifactId>
+    <artifactId>exception-handler</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>exception</name>
+    <name>exception-handler</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
