Spring Boot features - Sending Email

--- a/spring-boot-example/B.features/sending-email/src/main/resources/application.properties
+++ b/spring-boot-example/B.features/sending-email/src/main/resources/application.properties
@@ -13,3 +13,10 @@ spring.mail.properties.mail.smtp.starttls.required=false
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=3000
 spring.mail.properties.mail.smtp.writetimeout=5000
+
+#邮件代理配置
+#spring.mail.properties.proxySet=true
+#spring.mail.properties.mail.smtp.socks.host=
+#spring.mail.properties.mail.smtp.socks.port=
+
+#更多请查看：https://javaee.github.io/javamail/
