--- a/spring-boot-example/pom.xml
+++ b/spring-boot-example/pom.xml
@@ -29,6 +29,7 @@
         <module>A.hello/hello-world</module>
         <module>B.features/sending-email</module>
         <module>B.features/externalized-configuration</module>
+        <module>B.features/testing</module>
     </modules>
 
     <build>
