--- a/spring-boot-example/pom.xml
+++ b/spring-boot-example/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.6.RELEASE</version>
+        <version>2.1.7.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
@@ -30,6 +30,7 @@
         <module>B.features/sending-email</module>
         <module>B.features/externalized-configuration</module>
         <module>B.features/testing</module>
+        <module>B.features/auto-configuration</module>
     </modules>
 
     <build>
