Spring Boot features - Externalized Configuration

--- a/spring-boot-example/B.features/externalized-configuration/src/main/resources/application.properties
+++ b/spring-boot-example/B.features/externalized-configuration/src/main/resources/application.properties
@@ -14,3 +14,5 @@ my.description=${my.name} is a reliable person
 my.love.fruits[0]=apple
 my.love.fruits[1]=banana
 
+#一个孤独的属性
+alone.properties=happy
