--- a/spring-boot-example/pom.xml
+++ b/spring-boot-example/pom.xml
@@ -7,9 +7,10 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.7.RELEASE</version>
+        <version>2.2.1.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>com.example</groupId>
     <artifactId>spring-boot-example</artifactId>
     <version>0.0.1-SNAPSHOT</version>
@@ -33,6 +34,8 @@
         <module>B.features/auto-configuration</module>
         <module>B.features/logging</module>
         <module>C.starters/okhttp-spring-boot-starter</module>
+        <module>D.integration/rabbitmq-provider-demo</module>
+        <module>D.integration/rabbitmq-consumer-demo</module>
     </modules>
 
     <build>
