--- a/spring-boot-example/C.starters/okhttp-spring-boot-starter/pom.xml
+++ b/spring-boot-example/C.starters/okhttp-spring-boot-starter/pom.xml
@@ -2,15 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>spring-boot-example</artifactId>
         <groupId>com.example</groupId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>okhttp-spring-boot-starter</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>okhttp-spring-boot-starter</name>
+    <description>Demo project for Spring Boot</description>
 
     <dependencies>
         <dependency>
