--- a/spring-boot-example/E.tools/google-zxing/pom.xml
+++ b/spring-boot-example/E.tools/google-zxing/pom.xml
@@ -3,12 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.2.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <artifactId>spring-boot-example</artifactId>
+        <groupId>com.example</groupId>
+        <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
-    <groupId>com.example</groupId>
     <artifactId>google-zxing</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>google-zxing</name>
@@ -16,6 +15,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <google-zxing.version>3.4.0</google-zxing.version>
     </properties>
 
     <dependencies>
@@ -31,12 +31,12 @@
         <dependency>
             <groupId>com.google.zxing</groupId>
             <artifactId>core</artifactId>
-            <version>3.4.0</version>
+            <version>${google-zxing.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.zxing</groupId>
             <artifactId>javase</artifactId>
-            <version>3.4.0</version>
+            <version>${google-zxing.version}</version>
         </dependency>
         <!-- 开源多维码生成工具 -->
 
