--- a/spring-boot-example/B.features/logging/src/main/resources/application.properties
+++ b/spring-boot-example/B.features/logging/src/main/resources/application.properties
@@ -8,8 +8,8 @@ server.port=8080
 #spring.output.ansi.enabled=DETECT
 
 #文件输出
-logging.path=logs
-#logging.file=log/logging.log
+logging.file.path=logs
+#logging.file.name=log/logging.log
 
 #日志级别
 #logging.level.root = INFO
