--- a/spring-boot-example/D.integration/redis-integration-demo/src/main/resources/application.properties
+++ b/spring-boot-example/D.integration/redis-integration-demo/src/main/resources/application.properties
@@ -1,23 +1,23 @@
-# Redis_config - 由于配置了pool属性，所以需要引入commons-pool2依赖
-# Redis数据库索引（默认为0）
-spring.redis.database=15
-# Redis服务器地址
-spring.redis.host=47.103.57.109
-# Redis服务器连接端口
+# Redis_config - \u7531\u4E8E\u914D\u7F6E\u4E86pool\u5C5E\u6027\uFF0C\u6240\u4EE5\u9700\u8981\u5F15\u5165commons-pool2\u4F9D\u8D56
+# Redis\u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A0\uFF09
+spring.redis.database=0
+# Redis\u670D\u52A1\u5668\u5730\u5740
+spring.redis.host=
+# Redis\u670D\u52A1\u5668\u8FDE\u63A5\u7AEF\u53E3
 spring.redis.port=6379
-# Redis服务器连接密码（默认为空）
-spring.redis.password=rcp1qaz@WSX
-# 连接超时时间（毫秒）
+# Redis\u670D\u52A1\u5668\u8FDE\u63A5\u5BC6\u7801\uFF08\u9ED8\u8BA4\u4E3A\u7A7A\uFF09
+spring.redis.password=
+# \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
 spring.redis.timeout=3600ms
-# 连接池最大连接数（使用负值表示没有限制）
+# \u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
 spring.redis.lettuce.pool.max-active=8
-# 连接池最大阻塞等待时间（使用负值表示没有限制）
+# \u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
 spring.redis.lettuce.pool.max-wait=-1ms
-# lettuce超时
+# lettuce\u8D85\u65F6
 spring.redis.lettuce.shutdown-timeout=100ms
-# 连接池中的最大空闲连接（默认为8，负数表示无限）
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5\uFF08\u9ED8\u8BA4\u4E3A8\uFF0C\u8D1F\u6570\u8868\u793A\u65E0\u9650\uFF09
 spring.redis.lettuce.pool.max-idle=8
-# 连接池中的最小空闲连接（默认为0，该值只有为正数才有作用）
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5\uFF08\u9ED8\u8BA4\u4E3A0\uFF0C\u8BE5\u503C\u53EA\u6709\u4E3A\u6B63\u6570\u624D\u6709\u4F5C\u7528\uFF09
 spring.redis.lettuce.pool.min-idle=0
 
 #cache
