--- a/spring-boot-example/pom.xml
+++ b/spring-boot-example/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.5.RELEASE</version>
+        <version>2.3.2.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -43,6 +43,7 @@
         <module>E.tools/google-zxing</module>
         <module>E.tools/ip2region</module>
         <module>E.tools/jjwt</module>
+        <module>E.tools/jsch</module>
         <module>E.tools/oshi-core</module>
         <module>E.tools/p6spy</module>
         <module>E.tools/springdoc-openapi</module>
