--- a/spring-boot-example/E.tools/springdoc-openapi/src/main/resources/application.yml
+++ b/spring-boot-example/E.tools/springdoc-openapi/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
 server:
   port: 8080
 
-# ===== SpringDoc配置 =====#
+# ===== SpringDoc配置 ===== #
 springdoc:
   swagger-ui:
     # 自定义的文档界面访问路径。默认访问路径是/swagger-ui.html
@@ -38,7 +38,7 @@ springdoc:
   # 布尔值。实现OpenApi规范的打印。
   writer-with-default-pretty-printer: true
 
-# ===== swagger配置 =====#
+# ===== 自定义swagger配置 ===== #
 swagger:
   application-name: ${spring.application.name}
   application-version: 1.0
