--- a/spring-boot-example/E.tools/springfox-swagger/src/main/resources/application.yml
+++ b/spring-boot-example/E.tools/springfox-swagger/src/main/resources/application.yml
@@ -3,6 +3,8 @@ spring:
     name: springfox-swagger
 server:
   port: 8080
+
+# ===== 自定义swagger配置 ===== #
 swagger:
   enable: true
   application-name: ${spring.application.name}
