--- a/spring-boot-example/D.integration/rabbitmq-integration-demo/rabbitmq-consumer-demo/pom.xml
+++ b/spring-boot-example/D.integration/rabbitmq-integration-demo/rabbitmq-consumer-demo/pom.xml
@@ -3,10 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>spring-boot-example</artifactId>
+        <artifactId>rabbitmq-integration-demo</artifactId>
         <groupId>com.example</groupId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>rabbitmq-consumer-demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
