--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,35 @@
-
-\.idea/
-
-*.iml
-
+HELP.md
 target/
-
-*.project
-
-.settings/
-
-*.classpath
-
-*.factorypath
-
 .mvn
 mvnw
 mvnw.cmd
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### VS Code ###
+.vscode/
