fix p6spy example

--- a/spring-boot-example/E.tools/p6spy/src/main/resources/spy.properties
+++ b/spring-boot-example/E.tools/p6spy/src/main/resources/spy.properties
@@ -1,131 +1,131 @@
 module.log=com.p6spy.engine.logging.P6LogFactory,com.p6spy.engine.outage.P6OutageFactory
 
-# 自定义日志打印
+# \u81EA\u5B9A\u4E49\u65E5\u5FD7\u6253\u5370
 logMessageFormat=com.example.p6spy.format.MyFormat
 #logMessageFormat=com.p6spy.engine.spy.appender.CustomLineFormat
 
-# 使用日志系统记录sql
+# \u4F7F\u7528\u65E5\u5FD7\u7CFB\u7EDF\u8BB0\u5F55sql
 appender=com.p6spy.engine.spy.appender.Slf4JLogger
-## 配置记录Log例外
+## \u914D\u7F6E\u8BB0\u5F55Log\u4F8B\u5916
 excludecategories=info,debug,result,batc,resultset
-# 设置使用p6spy driver来做代理
+# \u8BBE\u7F6E\u4F7F\u7528p6spy driver\u6765\u505A\u4EE3\u7406
 deregisterdrivers=true
-# 日期格式
+# \u65E5\u671F\u683C\u5F0F
 dateformat=yyyy-MM-dd HH:mm:ss
-# 实际驱动
+# \u5B9E\u9645\u9A71\u52A8
 driverlist=org.h2.Driver
-# 是否开启慢SQL记录
+# \u662F\u5426\u5F00\u542F\u6162SQL\u8BB0\u5F55
 outagedetection=true
-# 慢SQL记录标准 秒
+# \u6162SQL\u8BB0\u5F55\u6807\u51C6\uFF0C\u5355\u4F4D\uFF1A\u79D2
 outagedetectioninterval=2
 
-##### 以下为官方配置说明 #####
+##### \u4EE5\u4E0B\u4E3A\u5B98\u65B9\u914D\u7F6E\u8BF4\u660E #####
 
-# 指定应用的日志拦截模块,默认为com.p6spy.engine.spy.P6SpyFactory
+# \u6307\u5B9A\u5E94\u7528\u7684\u65E5\u5FD7\u62E6\u622A\u6A21\u5757,\u9ED8\u8BA4\u4E3Acom.p6spy.engine.spy.P6SpyFactory
 #modulelist=com.p6spy.engine.spy.P6SpyFactory,com.p6spy.engine.logging.P6LogFactory,com.p6spy.engine.outage.P6OutageFactory
 
-# 真实JDBC driver , 多个以 逗号 分割 默认为空
+# \u771F\u5B9EJDBC driver , \u591A\u4E2A\u4EE5 \u9017\u53F7 \u5206\u5272 \u9ED8\u8BA4\u4E3A\u7A7A
 #driverlist=
 
-# 是否自动刷新 默认 flase
+# \u662F\u5426\u81EA\u52A8\u5237\u65B0 \u9ED8\u8BA4 flase
 #autoflush=false
 
-# 配置SimpleDateFormat日期格式 默认为空
+# \u914D\u7F6ESimpleDateFormat\u65E5\u671F\u683C\u5F0F \u9ED8\u8BA4\u4E3A\u7A7A
 #dateformat=
 
-# 打印堆栈跟踪信息 默认flase
+# \u6253\u5370\u5806\u6808\u8DDF\u8E2A\u4FE1\u606F \u9ED8\u8BA4flase
 #stacktrace=false
 
-# 如果 stacktrace=true，则可以指定具体的类名来进行过滤。
+# \u5982\u679C stacktrace=true\uFF0C\u5219\u53EF\u4EE5\u6307\u5B9A\u5177\u4F53\u7684\u7C7B\u540D\u6765\u8FDB\u884C\u8FC7\u6EE4\u3002
 #stacktraceclass=
 
-# 监测属性配置文件是否进行重新加载
+# \u76D1\u6D4B\u5C5E\u6027\u914D\u7F6E\u6587\u4EF6\u662F\u5426\u8FDB\u884C\u91CD\u65B0\u52A0\u8F7D
 #reloadproperties=false
 
-# 属性配置文件重新加载的时间间隔，单位:秒 默认60s
+# \u5C5E\u6027\u914D\u7F6E\u6587\u4EF6\u91CD\u65B0\u52A0\u8F7D\u7684\u65F6\u95F4\u95F4\u9694\uFF0C\u5355\u4F4D:\u79D2 \u9ED8\u8BA460s
 #reloadpropertiesinterval=60
 
-# 指定 Log 的 appender，取值：
+# \u6307\u5B9A Log \u7684 appender\uFF0C\u53D6\u503C\uFF1A
 #appender=com.p6spy.engine.spy.appender.Slf4JLogger
 #appender=com.p6spy.engine.spy.appender.StdoutLogger
 #appender=com.p6spy.engine.spy.appender.FileLogger
 
-# 指定 Log 的文件名 默认 spy.log
+# \u6307\u5B9A Log \u7684\u6587\u4EF6\u540D \u9ED8\u8BA4 spy.log
 #logfile=spy.log
 
-# 指定是否每次是增加 Log，设置为 false 则每次都会先进行清空 默认true
+# \u6307\u5B9A\u662F\u5426\u6BCF\u6B21\u662F\u589E\u52A0 Log\uFF0C\u8BBE\u7F6E\u4E3A false \u5219\u6BCF\u6B21\u90FD\u4F1A\u5148\u8FDB\u884C\u6E05\u7A7A \u9ED8\u8BA4true
 #append=true
 
-# 指定日志输出样式  默认为com.p6spy.engine.spy.appender.SingleLineFormat , 单行输出 不格式化语句
+# \u6307\u5B9A\u65E5\u5FD7\u8F93\u51FA\u6837\u5F0F  \u9ED8\u8BA4\u4E3Acom.p6spy.engine.spy.appender.SingleLineFormat , \u5355\u884C\u8F93\u51FA \u4E0D\u683C\u5F0F\u5316\u8BED\u53E5
 #logMessageFormat=com.p6spy.engine.spy.appender.SingleLineFormat
-# 也可以采用  com.p6spy.engine.spy.appender.CustomLineFormat 来自定义输出样式, 默认值是%(currentTime)|%(executionTime)|%(category)|connection%(connectionId)|%(sqlSingleLine)
-# 可用的变量为:
+# \u4E5F\u53EF\u4EE5\u91C7\u7528  com.p6spy.engine.spy.appender.CustomLineFormat \u6765\u81EA\u5B9A\u4E49\u8F93\u51FA\u6837\u5F0F, \u9ED8\u8BA4\u503C\u662F%(currentTime)|%(executionTime)|%(category)|connection%(connectionId)|%(sqlSingleLine)
+# \u53EF\u7528\u7684\u53D8\u91CF\u4E3A:
 #   %(connectionId)            connection id
-#   %(currentTime)             当前时间
-#   %(executionTime)           执行耗时
-#   %(category)                执行分组
-#   %(effectiveSql)            提交的SQL 换行
-#   %(effectiveSqlSingleLine)  提交的SQL 不换行显示
-#   %(sql)                     执行的真实SQL语句，已替换占位
-#   %(sqlSingleLine)           执行的真实SQL语句，已替换占位 不换行显示
+#   %(currentTime)             \u5F53\u524D\u65F6\u95F4
+#   %(executionTime)           \u6267\u884C\u8017\u65F6
+#   %(category)                \u6267\u884C\u5206\u7EC4
+#   %(effectiveSql)            \u63D0\u4EA4\u7684SQL \u6362\u884C
+#   %(effectiveSqlSingleLine)  \u63D0\u4EA4\u7684SQL \u4E0D\u6362\u884C\u663E\u793A
+#   %(sql)                     \u6267\u884C\u7684\u771F\u5B9ESQL\u8BED\u53E5\uFF0C\u5DF2\u66FF\u6362\u5360\u4F4D
+#   %(sqlSingleLine)           \u6267\u884C\u7684\u771F\u5B9ESQL\u8BED\u53E5\uFF0C\u5DF2\u66FF\u6362\u5360\u4F4D \u4E0D\u6362\u884C\u663E\u793A
 #customLogMessageFormat=%(currentTime)|%(executionTime)|%(category)|connection%(connectionId)|%(sqlSingleLine)
 
-# date类型字段记录日志时使用的日期格式 默认dd-MMM-yy
+# date\u7C7B\u578B\u5B57\u6BB5\u8BB0\u5F55\u65E5\u5FD7\u65F6\u4F7F\u7528\u7684\u65E5\u671F\u683C\u5F0F \u9ED8\u8BA4dd-MMM-yy
 #databaseDialectDateFormat=dd-MMM-yy
 
-# boolean类型字段记录日志时使用的日期格式 默认boolean 可选值numeric
+# boolean\u7C7B\u578B\u5B57\u6BB5\u8BB0\u5F55\u65E5\u5FD7\u65F6\u4F7F\u7528\u7684\u65E5\u671F\u683C\u5F0F \u9ED8\u8BA4boolean \u53EF\u9009\u503Cnumeric
 #databaseDialectBooleanFormat=boolean
 
-# 是否通过jmx暴露属性 默认true
+# \u662F\u5426\u901A\u8FC7jmx\u66B4\u9732\u5C5E\u6027 \u9ED8\u8BA4true
 #jmx=true
 
-# 如果jmx设置为true 指定通过jmx暴露属性时的前缀 默认为空
+# \u5982\u679Cjmx\u8BBE\u7F6E\u4E3Atrue \u6307\u5B9A\u901A\u8FC7jmx\u66B4\u9732\u5C5E\u6027\u65F6\u7684\u524D\u7F00 \u9ED8\u8BA4\u4E3A\u7A7A
 # com.p6spy(.<jmxPrefix>)?:name=<optionsClassName>
 #jmxPrefix=
 
-# 是否显示纳秒 默认false
+# \u662F\u5426\u663E\u793A\u7EB3\u79D2 \u9ED8\u8BA4false
 #useNanoTime=false
 
-# 实际数据源 JNDI
+# \u5B9E\u9645\u6570\u636E\u6E90 JNDI
 #realdatasource=/RealMySqlDS
-# 实际数据源 datasource class
+# \u5B9E\u9645\u6570\u636E\u6E90 datasource class
 #realdatasourceclass=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
 
-# 实际数据源所携带的配置参数 以 k=v 方式指定 以 分号 分割
+# \u5B9E\u9645\u6570\u636E\u6E90\u6240\u643A\u5E26\u7684\u914D\u7F6E\u53C2\u6570 \u4EE5 k=v \u65B9\u5F0F\u6307\u5B9A \u4EE5 \u5206\u53F7 \u5206\u5272
 #realdatasourceproperties=port;3306,serverName;myhost,databaseName;jbossdb,foo;bar
 
-# jndi数据源配置
-# 设置 JNDI 数据源的 NamingContextFactory。
+# jndi\u6570\u636E\u6E90\u914D\u7F6E
+# \u8BBE\u7F6E JNDI \u6570\u636E\u6E90\u7684 NamingContextFactory\u3002
 #jndicontextfactory=org.jnp.interfaces.NamingContextFactory
-# 设置 JNDI 数据源的提供者的 URL。
+# \u8BBE\u7F6E JNDI \u6570\u636E\u6E90\u7684\u63D0\u4F9B\u8005\u7684 URL\u3002
 #jndicontextproviderurl=localhost:1099
-# 设置 JNDI 数据源的一些定制信息，以分号分隔。
+# \u8BBE\u7F6E JNDI \u6570\u636E\u6E90\u7684\u4E00\u4E9B\u5B9A\u5236\u4FE1\u606F\uFF0C\u4EE5\u5206\u53F7\u5206\u9694\u3002
 #jndicontextcustom=java.naming.factory.url.pkgs;org.jboss.naming:org.jnp.interfaces
 
-# 是否开启日志过滤 默认false， 这项配置是否生效前提是配置了 include/exclude/sqlexpression
+# \u662F\u5426\u5F00\u542F\u65E5\u5FD7\u8FC7\u6EE4 \u9ED8\u8BA4false\uFF0C \u8FD9\u9879\u914D\u7F6E\u662F\u5426\u751F\u6548\u524D\u63D0\u662F\u914D\u7F6E\u4E86 include/exclude/sqlexpression
 #filter=false
 
-# 过滤 Log 时所包含的表名列表，以逗号分隔 默认为空
+# \u8FC7\u6EE4 Log \u65F6\u6240\u5305\u542B\u7684\u8868\u540D\u5217\u8868\uFF0C\u4EE5\u9017\u53F7\u5206\u9694 \u9ED8\u8BA4\u4E3A\u7A7A
 #include=
-# 过滤 Log 时所排除的表名列表，以逗号分隔 默认为空
+# \u8FC7\u6EE4 Log \u65F6\u6240\u6392\u9664\u7684\u8868\u540D\u5217\u8868\uFF0C\u4EE5\u9017\u53F7\u5206\u9694 \u9ED8\u8BA4\u4E3A\u7A7A
 #exclude=
 
-# 过滤 Log 时的 SQL 正则表达式名称  默认为空
+# \u8FC7\u6EE4 Log \u65F6\u7684 SQL \u6B63\u5219\u8868\u8FBE\u5F0F\u540D\u79F0  \u9ED8\u8BA4\u4E3A\u7A7A
 #sqlexpression=
 
-#显示指定过滤 Log 时排队的分类列表，取值: error, info, batch, debug, statement,
+#\u663E\u793A\u6307\u5B9A\u8FC7\u6EE4 Log \u65F6\u6392\u961F\u7684\u5206\u7C7B\u5217\u8868\uFF0C\u53D6\u503C: error, info, batch, debug, statement,
 #commit, rollback, result and resultset are valid values
-# (默认 info,debug,result,resultset,batch)
+# (\u9ED8\u8BA4 info,debug,result,resultset,batch)
 #excludecategories=info,debug,result,resultset,batch
 
-# 是否过滤二进制字段
+# \u662F\u5426\u8FC7\u6EE4\u4E8C\u8FDB\u5236\u5B57\u6BB5
 # (default is false)
 #excludebinary=false
 
-# P6Log 模块执行时间设置，整数值 (以毫秒为单位)，只有当超过这个时间才进行记录 Log。 默认为0
+# P6Log \u6A21\u5757\u6267\u884C\u65F6\u95F4\u8BBE\u7F6E\uFF0C\u6574\u6570\u503C (\u4EE5\u6BEB\u79D2\u4E3A\u5355\u4F4D)\uFF0C\u53EA\u6709\u5F53\u8D85\u8FC7\u8FD9\u4E2A\u65F6\u95F4\u624D\u8FDB\u884C\u8BB0\u5F55 Log\u3002 \u9ED8\u8BA4\u4E3A0
 #executionThreshold=
 
-# P6Outage 模块是否记录较长时间运行的语句 默认false
+# P6Outage \u6A21\u5757\u662F\u5426\u8BB0\u5F55\u8F83\u957F\u65F6\u95F4\u8FD0\u884C\u7684\u8BED\u53E5 \u9ED8\u8BA4false
 # outagedetection=true|false
-# P6Outage 模块执行时间设置，整数值 （以秒为单位)），只有当超过这个时间才进行记录 Log。 默认30s
+# P6Outage \u6A21\u5757\u6267\u884C\u65F6\u95F4\u8BBE\u7F6E\uFF0C\u6574\u6570\u503C \uFF08\u4EE5\u79D2\u4E3A\u5355\u4F4D)\uFF09\uFF0C\u53EA\u6709\u5F53\u8D85\u8FC7\u8FD9\u4E2A\u65F6\u95F4\u624D\u8FDB\u884C\u8BB0\u5F55 Log\u3002 \u9ED8\u8BA430s
 # outagedetectioninterval=integer time (seconds)
