--- a/spring-boot-example/E.tools/p6spy/src/main/resources/application.properties
+++ b/spring-boot-example/E.tools/p6spy/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 #datasource
 spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
-spring.datasource.url=jdbc:p6spy:h2:~/test
+spring.datasource.url=jdbc:p6spy:h2:mem:test
 spring.datasource.username=sa
 spring.datasource.password=
 
 #jpa
+spring.jpa.database=h2
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
