tools demo - Caffeine：一个基于Java8开发的提供了近乎最佳命中率的高性能的缓存库

--- a/spring-boot-example/E.tools/caffeine/pom.xml
+++ b/spring-boot-example/E.tools/caffeine/pom.xml
@@ -34,7 +34,7 @@
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
 		</dependency>
-		<!-- 内存缓存 -->
+		<!-- 本地（进程内）缓存 -->
 		<dependency>
 			<groupId>com.github.ben-manes.caffeine</groupId>
 			<artifactId>caffeine</artifactId>
