--- a/spring-boot-example/C.starters/okhttp-spring-boot-starter/pom.xml
+++ b/spring-boot-example/C.starters/okhttp-spring-boot-starter/pom.xml
@@ -14,6 +14,10 @@
     <name>okhttp-spring-boot-starter</name>
     <description>Demo project for Spring Boot</description>
 
+    <properties>
+        <okhttp.version>4.1.0</okhttp.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -37,7 +41,7 @@
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
-            <version>4.1.0</version>
+            <version>${okhttp.version}</version>
         </dependency>
     </dependencies>
 
