--- a/spring-boot-example/B.features/auto-configuration/pom.xml
+++ b/spring-boot-example/B.features/auto-configuration/pom.xml
@@ -6,11 +6,10 @@
     <parent>
         <artifactId>spring-boot-example</artifactId>
         <groupId>com.example</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>auto-configuration</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
     <name>auto-configuration</name>
     <description>Demo project for Spring Boot</description>
 
@@ -33,7 +32,7 @@
         <dependency>
             <groupId>com.example</groupId>
             <artifactId>okhttp-spring-boot-starter</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 
