--- a/spring-boot-example/B.features/logging/pom.xml
+++ b/spring-boot-example/B.features/logging/pom.xml
@@ -6,11 +6,10 @@
     <parent>
         <artifactId>spring-boot-example</artifactId>
         <groupId>com.example</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>logging</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
     <name>logging</name>
     <description>Demo project for Spring Boot</description>
 
