--- a/spring-boot-example/B.features/testing/pom.xml
+++ b/spring-boot-example/B.features/testing/pom.xml
@@ -6,16 +6,14 @@
     <parent>
         <artifactId>spring-boot-example</artifactId>
         <groupId>com.example</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>testing</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
     <name>testing</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
-        <java.version>1.8</java.version>
         <maven.test.skip>true</maven.test.skip>
     </properties>
 
