--- a/spring-boot-example/D.integration/rabbitmq-integration-demo/pom.xml
+++ b/spring-boot-example/D.integration/rabbitmq-integration-demo/pom.xml
@@ -3,17 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <artifactId>spring-boot-example</artifactId>
         <groupId>com.example</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-
     <artifactId>rabbitmq-integration-demo</artifactId>
     <packaging>pom</packaging>
-
     <name>rabbitmq-integration-demo</name>
     <description>Demo project for Spring Boot</description>
 
