--- a/spring-boot-example/E.tools/apache-poi/pom.xml
+++ b/spring-boot-example/E.tools/apache-poi/pom.xml
@@ -5,16 +5,14 @@
 	<parent>
 		<artifactId>spring-boot-example</artifactId>
 		<groupId>com.example</groupId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>1.0.0</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	<artifactId>apache-poi</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<name>apache-poi</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
-		<java.version>1.8</java.version>
 		<poi.version>4.1.2</poi.version>
 	</properties>
 
