--- a/spring-boot-example/E.tools/ip2region/pom.xml
+++ b/spring-boot-example/E.tools/ip2region/pom.xml
@@ -5,16 +5,14 @@
     <parent>
         <artifactId>spring-boot-example</artifactId>
         <groupId>com.example</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>ip2region</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
     <name>ip2region</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
-        <java.version>1.8</java.version>
         <ip2region.version>1.7.2</ip2region.version>
     </properties>
 
