--- a/spring-boot-example/E.tools/springfox-swagger/pom.xml
+++ b/spring-boot-example/E.tools/springfox-swagger/pom.xml
@@ -5,16 +5,14 @@
     <parent>
         <artifactId>spring-boot-example</artifactId>
         <groupId>com.example</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>springfox-swagger</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
     <name>springfox-swagger</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
-        <java.version>1.8</java.version>
         <springfox.version>3.0.0</springfox.version>
     </properties>
 
