integration demo - mongodb：一个基于分布式文件存储的数据库

--- a/spring-boot-example/D.integration/mongodb-integration-demo/src/main/resources/application.properties
+++ b/spring-boot-example/D.integration/mongodb-integration-demo/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-#spring.data.mongodb.uri=mongodb://user:pwd@localhost:27017/database
-#多个IP集群可以采用以下配置：spring.data.mongodb.uri=mongodb://user:pwd@ip1:port1,ip2:port2/database
+#\u5355\u673A\uFF1Aspring.data.mongodb.uri=mongodb://user:pwd@localhost:27017/database
+#\u96C6\u7FA4\uFF1Aspring.data.mongodb.uri=mongodb://user:pwd@ip1:port1,ip2:port2/database
 spring.data.mongodb.uri=mongodb://user:pwd@localhost:27017/database
