--- a/spring-boot-example/D.integration/mongodb-integration-demo/pom.xml
+++ b/spring-boot-example/D.integration/mongodb-integration-demo/pom.xml
@@ -38,6 +38,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
