--- a/spring-boot-example/A.hello/hello-world/pom.xml
+++ b/spring-boot-example/A.hello/hello-world/pom.xml
@@ -4,10 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>spring-boot-example</artifactId>
+        <artifactId>A.hello</artifactId>
         <groupId>com.example</groupId>
-        <version>1.0.0</version>
-        <relativePath>../../pom.xml</relativePath>
+        <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>hello-world</artifactId>
     <name>hello-world</name>
