--- a/spring-boot-example/C.starters/pom.xml
+++ b/spring-boot-example/C.starters/pom.xml
@@ -4,19 +4,20 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>D.integration</artifactId>
+        <artifactId>spring-boot-example</artifactId>
         <groupId>com.example</groupId>
         <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>rabbitmq-integration-demo</artifactId>
+    <artifactId>C.starters</artifactId>
     <packaging>pom</packaging>
-    <name>rabbitmq-integration-demo</name>
-    <description>Demo project for Spring Boot</description>
+
+    <name>starters</name>
+    <description>一些框架或功能整合后的Spring Boot Starter</description>
 
     <modules>
-        <module>rabbitmq-consumer-demo</module>
-        <module>rabbitmq-provider-demo</module>
+        <module>kaptcha-spring-boot-starter</module>
+        <module>okhttp-spring-boot-starter</module>
     </modules>
 
 </project>
