--- a/spring-boot-example/D.integration/rabbitmq-integration-demo/rabbitmq-provider-demo/pom.xml
+++ b/spring-boot-example/D.integration/rabbitmq-integration-demo/rabbitmq-provider-demo/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>rabbitmq-integration-demo</artifactId>
 		<groupId>com.example</groupId>
-		<version>1.0.0</version>
+		<version>${revision}</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>rabbitmq-provider-demo</artifactId>
